[package]
name = "ByteMystic"
version = "0.1.0"
edition = "2021"
author = "koda"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "15.0.0"
hex = "0.4.3"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"

